--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 beautifulsoup4==4.12.3
+blip==0.1.0
 bs4==0.0.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+doqu==0.28.2
 et-xmlfile==1.1.0
+fairscale==0.4.13
 filelock==3.15.4
 fsspec==2024.6.1
 huggingface-hub==0.23.4
@@ -26,6 +29,8 @@ pytz==2024.1
 PyYAML==6.0.1
 regex==2024.5.15
 requests==2.32.3
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
 safetensors==0.4.3
 scikit-learn==1.5.1
 scipy==1.14.0
@@ -34,6 +39,7 @@ six==1.16.0
 soupsieve==2.5
 sympy==1.12.1
 threadpoolctl==3.5.0
+timm==1.0.7
 tokenizers==0.19.1
 torch==2.3.1
 torchvision==0.18.1
